--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -28,7 +28,7 @@
   </p>
 
   <div class="links mt-5">
-    <ul class="nav justify-content-center">
+    <ul class="nav nav-fill justify-content-center">
       <li class="nav-item" >
          <a href="#" class="nav-link">Ropa para Hombre </a>
       </li>
@@ -38,12 +38,20 @@
       </li>
 
       <li class="nav-item" >
-       <a href="#" class="nav-link">Alquileres</a>
+        <a href="contact" class="nav-link">Contacto</a>
       </li>
-
-      <li class="nav-item" >
-       <a href="contact" class="nav-link">Contacto</a>
-      </li>
+      
+      <li class="nav-item dropdown" >
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
+          href="#" role="button" aria-haspopup="true" aria-expanded="false">More</a>
+          <div class="dropdown-menu" >
+            <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Clientes</a>
+            <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Empleados</a>
+            <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Prenda</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#" style="text-decoration: none">Alquileres</a>
+          </div>
+        </li>
 
     </ul>
 
