alquileres form begin

--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -48,7 +48,7 @@
             <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Usuario</a>
             <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Prenda</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#" style="text-decoration: none">Alquileres</a>
+            <a class="dropdown-item" href="/alquileres" style="text-decoration: none">Alquileres</a>
           </div>
         </li>
 
