CRUD -> Create Ready

--- a/resources/views/alquileres/index.edge
+++ b/resources/views/alquileres/index.edge
@@ -21,7 +21,7 @@
   <div class="links mt-4" id="index-alquileres">
     <ul class="nav nav-fill justify-content-center">
       <li class="nav-item">
-        <span style="color:white">IMG</span><a href="/alquileres/registro" class="nav-link"> Registrar Alquiler </a></li>
+        <span style="color:white">IMG</span><a href="/alquileres/form" class="nav-link"> Registrar Alquiler </a></li>
       <li class="nav-item">
         <span style="color:white">IMG</span><a href="/alquileres/all" class="nav-link"> Ver Todos los Alquileres </a></li>
     </ul>
