--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -10,19 +10,24 @@
 
 @section('content')
   
+<!--
+  *definir a que ruta hara la accion
+  *el metodo que usara
+-->
 
   <div class="form-alquiler">
     <div class="card text-white bg-dark">
       <h2 class="card-header">Registrar de Alquiler</h5>
       <div class="card-body">
 
-          <form action="" method="">
+      <form action="/alquileres/registro" method="POST">
+            {{ csrfField() }}
               <div class="form-group">
                 <label for="" class="mt-3">Fecha de Entrega</label>
-                <input type="date" class="form-control" id="fecha_entrega">
+                <input type="date" class="form-control" name="date_delivery">
                 <label for="" class="mt-3">Fecha de Entrega</label>
-                <input type="date" class="form-control" id="fecha_devolucion">
-                <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" id="valor">
+                <input type="date" class="form-control" name="return_date">
+                <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value">
                 <input type="submit" class="btn btn-primary btn-block mt-3" value="Submit">
               </div>
             </form>
