CRUD -> Read Ready

--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -31,17 +31,22 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact">Contact</a>
+                <a class="nav-link" href="/contact">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ropa para Mujer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Ropa para Hombre</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  More
+                  Alquileres
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Ropa para Mujer</a>
-                  <a class="dropdown-item" href="#">Ropa para Hombre</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Alquileres</a>
+                  <!---<div class="dropdown-divider"></div>-->
+                  <a class="dropdown-item" href="/alquileres/all">Ver todos los Alquileres</a>
+                  <a class="dropdown-item" href="/alquileres/form">Registrar Alquiler Nuevo</a>
                 </div>
               </li>
             </ul>
