--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -25,7 +25,7 @@
               <div class="form-group">
                 <label for="" class="mt-3">Fecha de Entrega</label>
                 <input type="date" class="form-control" name="date_delivery">
-                <label for="" class="mt-3">Fecha de Entrega</label>
+                <label for="" class="mt-3">Fecha de Devolucion</label>
                 <input type="date" class="form-control" name="return_date">
                 <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value">
                 <input type="submit" class="btn btn-primary btn-block mt-3" value="Submit">
