CRUD -> delete logic and delete permanen ready

--- a/resources/views/alquileres/all.edge
+++ b/resources/views/alquileres/all.edge
@@ -25,17 +25,19 @@
         </thead>
         <tbody>
           @each(alq in alquileres)
-            <tr>
-            <th class="table-light" scope="row">{{ alq.id }}</th>
-            <td class="table-light">{{ alq.date_delivery }}</td>
-            <td class="table-light">{{ alq.return_date }}</td>
-            <td class="table-light">{{ alq.value }}</td>
-            <td class="table-light">
-                <a href="/alquileres/edit/{{alq.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">Actualizar</a>
-                <a href="" class="btn btn-warning mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[L]Borrar</a>
-                <a href="" class="btn btn-danger mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[S]Borrar</a>
-            </td>
-            </tr>
+            @if(alq.state == 1)
+                <tr>
+                <th class="table-light" scope="row">{{ alq.id }}</th>
+                <td class="table-light">{{ alq.date_delivery }}</td>
+                <td class="table-light">{{ alq.return_date }}</td>
+                <td class="table-light">{{ alq.value }}</td>
+                <td class="table-light">
+                    <a href="/alquileres/edit/{{alq.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">Actualizar</a>
+                    <a href="/alquileres/delete/{{alq.id}}" class="btn btn-warning mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[L]Borrar</a>
+                    <a href="/alquileres/destroy/{{alq.id}}" class="btn btn-danger mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[S]Borrar</a>
+                </td>
+                </tr>                
+            @endif
           @else
             <h2 class="text-white">No hay Alquileres</h2>
           @endeach
