--- a/resources/views/alquileres/edit.edge
+++ b/resources/views/alquileres/edit.edge
@@ -15,7 +15,7 @@
       <h2 class="card-header">Actualizacion de Alquileres</h5>
       <div class="card-body">
 
-      <form action="{{ ' /alquileres/'+alquileres_id.id+'?_method=PUT' }}" method="POST">
+      <form action="{{ ' /alquileres/update/'+alquileres_id.id+'?_method=PUT' }}" method="POST">
             {{ csrfField() }}
             <div class="form-group">
 
