--- a/resources/views/alquileres/index.edge
+++ b/resources/views/alquileres/index.edge
@@ -21,9 +21,19 @@
   <div class="links mt-4" id="index-alquileres">
     <ul class="nav nav-fill justify-content-center">
       <li class="nav-item">
-        <span style="color:white">IMG</span><a href="/alquileres/form" class="nav-link"> Registrar Alquiler </a></li>
+        <a href="/alquileres/form" class="nav-link"> 
+          <img src="https://itrend.es/wp-content/uploads/2018/04/lauren-roberts-469994-unsplash.jpg" alt="" width="450" height="350"> <br>
+          Registrar Alquiler 
+        </a>
+      </li>
+
       <li class="nav-item">
-        <span style="color:white">IMG</span><a href="/alquileres/all" class="nav-link"> Ver Todos los Alquileres </a></li>
+        <a href="/alquileres/all" class="nav-link"> 
+          <img src="https://estaticos.qdq.com/swdata/photos/793/793861600/61b41cecf72d4e5bb032805af837b48a.jpg" alt="" width="450" height="350">  <br>
+          Ver Todos los Alquileres 
+        </a>
+      </li>
+      
     </ul>
   </div>
 
