--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -24,10 +24,10 @@
             {{ csrfField() }}
               <div class="form-group">
                 <label for="" class="mt-3">Fecha de Entrega</label>
-                <input type="date" class="form-control" name="date_delivery">
+                <input type="date" class="form-control" name="date_delivery" required>
                 <label for="" class="mt-3">Fecha de Devolucion</label>
-                <input type="date" class="form-control" name="return_date">
-                <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value">
+                <input type="date" class="form-control" name="return_date" required>
+                <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value" required>
                 <input type="submit" class="btn btn-primary btn-block mt-3" value="Submit">
               </div>
             </form>
