--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -45,7 +45,7 @@
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
           href="#" role="button" aria-haspopup="true" aria-expanded="false">More</a>
           <div class="dropdown-menu" >
-            <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Cliente</a>
+            <a class="dropdown-item" href="/clientes" style="text-decoration: none">Registro de Cliente</a>
             <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Prenda</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/alquileres" style="text-decoration: none">Alquileres</a>
