--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -8,6 +8,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|Satisfy&display=swap" rel="stylesheet"> 
 
+
   {{ style('style') }}
   @!section('style-extras')
   <title>
@@ -28,25 +29,25 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-decoration-none" href="/">|Home| <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact">Contact</a>
+                <a class="nav-link text-decoration-none" href="/contact">|Contact|</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ropa para Mujer</a>
+                <a class="nav-link text-decoration-none" href="#">|Ropa para Mujer|</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Ropa para Hombre</a>
+                <a class="nav-link text-decoration-none" href="#">|Ropa para Hombre|</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Alquileres
+                <a class="nav-link dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  |Alquileres|
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <!---<div class="dropdown-divider"></div>-->
-                  <a class="dropdown-item" href="/alquileres/all">Ver todos los Alquileres</a>
-                  <a class="dropdown-item" href="/alquileres/form">Registrar Alquiler Nuevo</a>
+                  <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver todos los Alquileres</a>
+                  <a class="dropdown-item text-decoration-none" href="/alquileres/form">Registrar Alquiler Nuevo</a>
                 </div>
               </li>
             </ul>
