--- a/resources/views/alquileres/all.edge
+++ b/resources/views/alquileres/all.edge
@@ -43,7 +43,9 @@
           @endeach
         </tbody>
       </table>
-
+      <caption>
+          <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
+      </caption>
   </div>
 
 @endsection
