--- a/resources/views/alquileres/edit.edge
+++ b/resources/views/alquileres/edit.edge
@@ -37,6 +37,10 @@
   
       </div>
     </div>
+
+    <caption>
+        <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
+    </caption>
   </div>
 
   <script>
