--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -34,6 +34,9 @@
             
       </div>
     </div>
+    <caption>
+        <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
+    </caption>
   </div>
 
 @endsection
