--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -29,25 +29,37 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link text-decoration-none" href="/">|Home| <span class="sr-only">(current)</span></a>
+                <a class="nav-link text-decoration-none" href="/">Home<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="/contact">|Contact|</a>
+                <a class="nav-link text-decoration-none" href="/contact">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="#">|Ropa para Mujer|</a>
+                <a class="nav-link text-decoration-none" href="#">Ropa para Mujer</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="#">|Ropa para Hombre|</a>
+                <a class="nav-link text-decoration-none" href="#">Ropa para Hombre</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  |Alquileres|
+                  More
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <!---<div class="dropdown-divider"></div>-->
-                  <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver todos los Alquileres</a>
-                  <a class="dropdown-item text-decoration-none" href="/alquileres/form">Registrar Alquiler Nuevo</a>
+                  <!--
+                    <a class="dropdown-item text-decoration-none" href="/alquileres/all">Ver todos los Alquileres</a>
+                    <a class="dropdown-item text-decoration-none" href="/alquileres/form">Registrar Alquiler Nuevo</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item text-decoration-none" href="/clientes/form">Registrar Cliente Nuevo</a>
+                    <a class="dropdown-item text-decoration-none" href="/clientes/all">Ver todos los Clientes</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item text-decoration-none" href="/prendas/form">Registrar Prenda Nueva</a>
+                    <a class="dropdown-item text-decoration-none" href="/prendas/all">Ver todas las Prendas</a>
+                  -->
+                  <a class="dropdown-item text-decoration-none" href="/alquileres">Alquileres</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-decoration-none" href="/clientes">Clientes</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-decoration-none" href="/prendas">Prendas</a>
                 </div>
               </li>
             </ul>
