--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -29,29 +29,34 @@
 
   <div class="links mt-5">
     <ul class="nav nav-fill justify-content-center">
-      <li class="nav-item" >
-         <a href="#" class="nav-link">Ropa para Hombre </a>
+
+      <li class="nav-item dropdown" >
+            <a class="nav-link dropdown-toggle " data-toggle="dropdown" 
+            href="#" role="button" aria-haspopup="true" aria-expanded="false">Ropa sobre medida</a>
+          <div class="dropdown-menu" >
+            <a href="#" class="nav-link text-decoration-none">Ropa para Mujer</a>
+            <div class="dropdown-divider"></div>
+            <a href="#" class="nav-link text-decoration-none">Ropa para Hombre </a>
+          </div>
       </li>
 
-      <li class="nav-item" >
-       <a href="#" class="nav-link">Ropa para Mujer</a>
-      </li>
-
-      <li class="nav-item" >
-        <a href="contact" class="nav-link">Contacto</a>
-      </li>
+      
       
       <li class="nav-item dropdown" >
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" 
-          href="#" role="button" aria-haspopup="true" aria-expanded="false">More</a>
+          href="#" role="button" aria-haspopup="true" aria-expanded="false">Mas</a>
           <div class="dropdown-menu" >
-            <a class="dropdown-item" href="/clientes" style="text-decoration: none">Registro de Cliente</a>
-            <a class="dropdown-item" href="#" style="text-decoration: none">Registro de Prenda</a>
+            <a class="dropdown-item" href="/clientes" style="text-decoration: none">Clientes</a>
+            <a class="dropdown-item" href="#" style="text-decoration: none">Prendas</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/alquileres" style="text-decoration: none">Alquileres</a>
           </div>
-        </li>
+      </li>
 
+      <li class="nav-item" >
+            <a href="contact" class="nav-link">Contacto</a>
+      </li>
+      
     </ul>
 
   </div>
