--- a/resources/views/alquileres/all.edge
+++ b/resources/views/alquileres/all.edge
@@ -5,16 +5,26 @@
 @endsection
 
 @section('title')
-  Alquileres
+  Alquileres - All
 @endsection
 
 @section('content')
-  <h1 class="mt-3">Todos los Alquileres</h1>
   <div class="table-resposive mt-4 text-center" id="all_alquilere">
 
     <table class="table table-borderless table-hover">
-        <caption class="text-white">Lista de Alquilres</caption>
         <thead class="thead-light">
+            <tr><th colspan="6" class="bg-info">
+                <div class="row">
+                  <div class="col-2">
+                      <a href="/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                        <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+                      </a>
+                  </div>
+                  <div class="col-8">
+                      <h2 class="card-title mt-3">Todos los Alquileres</h2>
+                  </div>
+                </div>
+              </th></tr>
           <tr>
             <th scope="col">#</th>
             <th scope="col">Fecha de Entrega</th>
@@ -43,9 +53,6 @@
           @endeach
         </tbody>
       </table>
-      <caption>
-          <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
-      </caption>
   </div>
 
 @endsection
