--- a/resources/views/alquileres/destroy.edge
+++ b/resources/views/alquileres/destroy.edge
@@ -5,14 +5,23 @@
 @endsection
 
 @section('title')
-  Registro de Alquiler
+  Alquiler - Destroy
 @endsection
 
 @section('content')
   
   <div class="form-alquiler">
     <div class="card text-white bg-dark">
-      <h2 class="card-header">Borrado Permanente</h5>
+        <div class="row">
+            <div class="col-2">
+                <a href="/alquileres/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                  <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+                </a>
+            </div>
+            <div class="col-8">
+                <h2 class="card-title mt-3">Borrado Permanente</h2>
+            </div>
+          </div>
       <div class="card-body">
 
       <form action="{{ ' /alquileres/des/'+alquileres_id.id+'?_method=DELETE' }}" method="POST">
