--- a/resources/views/alquileres/form.edge
+++ b/resources/views/alquileres/form.edge
@@ -5,21 +5,23 @@
 @endsection
 
 @section('title')
-  Registro de Alquiler
+  Alquiler - Registro
 @endsection
 
 @section('content')
-  
-<!--
-  *definir a que ruta hara la accion
-  *el metodo que usara
--->
-
   <div class="form-alquiler">
     <div class="card text-white bg-dark">
-      <h2 class="card-header">Registrar de Alquiler</h5>
+      <div class="row">
+        <div class="col-2">
+            <a href="/alquileres" class="card-title btn btn-link mt-2" style="text-decoration: none">
+              <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+            </a>
+        </div>
+        <div class="col-8">
+            <h2 class="card-title mt-3">Registro de Alquiler</h2>
+        </div>
+      </div>
       <div class="card-body">
-
       <form action="/alquileres/registro" method="POST">
             {{ csrfField() }}
               <div class="form-group">
@@ -30,13 +32,10 @@
                 <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value" required>
                 <input type="submit" class="btn btn-primary btn-block mt-3" value="Submit">
               </div>
-            </form>
-            
+      </form>     
       </div>
     </div>
-    <caption>
-        <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
-    </caption>
+    
   </div>
 
 @endsection
