--- a/resources/views/clientes/all.edge
+++ b/resources/views/clientes/all.edge
@@ -5,18 +5,26 @@
 @endsection
 
 @section('title')
-  Clientes
+  Clientes - All
 @endsection
 
 @section('content')
-  <h1 class="mt-3">Todos los Clientes</h1>
   <div class="table-resposive mt-4 text-center" id="all_alquilere">
 
     <table class="table table-borderless table-hover">
-        <caption class="text-white">Lista de Clientes <br> 
-          <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
-        </caption>
         <thead class="thead-light">
+            <tr><th colspan="6" class="bg-info">
+              <div class="row">
+                <div class="col-2">
+                    <a href="/clientes" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                      <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+                    </a>
+                </div>
+                <div class="col-8">
+                    <h2 class="card-title mt-3">Todos los Clientes</h2>
+                </div>
+              </div>
+            </th></tr>
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nombres</th>
@@ -27,7 +35,8 @@
           </tr>
         </thead>
         <tbody>
-          @each(cli in clientes)
+            @each(cli in clientes)
+              @if(cli.state == 1)  
                 <tr>
                   <th class="table-light" scope="row">{{ cli.id }}</th>
                   <td class="table-light">{{ cli.names }}</td>
@@ -35,15 +44,15 @@
                   <td class="table-light">{{ cli.cellphone }}</td>
                   <td class="table-light">{{ cli.address }}</td>
                   <td class="table-light">
-                      <a href="/clientes/edit/{{cli.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">Actualizar</a>
-                      <a href="/clientes/delete/{{cli.id}}" class="btn btn-warning mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[L]Borrar</a>
-                      <a href="/clientes/destroy/{{cli.id}}" class="btn btn-danger mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[S]Borrar</a>
+                    <a href="/clientes/edit/{{cli.id}}" class="btn btn-primary mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">Actualizar</a>
+                    <a href="/clientes/delete/{{cli.id}}" class="btn btn-warning mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[L]Borrar</a>
+                    <a href="/clientes/destroy/{{cli.id}}" class="btn btn-danger mr-2 mt-2 mb-2 ml-2" style="text-decoration: none">[S]Borrar</a>
                   </td>
-                </tr>                
-          @else
+                </tr>    
+              @endif
+            @else
             <h2 class="text-white">No hay Clientes Registrados</h2>
-          @endeach
-          
+            @endeach
         </tbody>
       </table>
 
