--- a/resources/views/clientes/edit.edge
+++ b/resources/views/clientes/edit.edge
@@ -10,9 +10,18 @@
 
 @section('content')
   
-  <div class="form-alquiler">
+  <div class="form-clientes">
     <div class="card text-white bg-dark">
-      <h2 class="card-header">Actualizacion de Clientes</h5>
+        <div class="row">
+            <div class="col-2">
+                <a href="/clientes/all" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                  <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+                </a>
+            </div>
+            <div class="col-8">
+                <h2 class="card-title mt-3">Actualizar Cliente</h2>
+            </div>
+          </div>
       <div class="card-body">
 
       <form action="{{ ' /clientes/update/'+clientes_id.id+'?_method=PUT' }}" method="POST">
@@ -27,9 +36,7 @@
         </form>
       </div>
     </div>
-    <caption>
-        <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
-    </caption>
+    
   </div>
 
 
