--- a/resources/views/clientes/form.edge
+++ b/resources/views/clientes/form.edge
@@ -12,23 +12,29 @@
     
     <div class="form-clientes">
         <div class="card text-white bg-dark mt-5">
-            <h2 class="card-header">Registro de Clientes</h2>
+                <div class="row">
+                        <div class="col-2">
+                            <a href="/clientes" class="card-title btn btn-link mt-2" style="text-decoration: none">
+                              <img src="http://www.sabservicios.com.mx/bolsadetrabajo/public/sab/img/volver-2.png" alt="" width="40" height="40">
+                            </a>
+                        </div>
+                        <div class="col-8">
+                            <h2 class="card-title mt-3">Registro de Clientes</h2>
+                        </div>
+                      </div>
             <div class="card-body">
                 <form action="/clientes/registro" method="POST">
                     {{ csrfField() }}
                     <div class="form-group">
-                        <input type="text" class="form-control mt-2" name="names" placeholder="Nombres">
-                        <input type="text" class="form-control mt-2" name="lastnames" placeholder="Apellidos">
-                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono">
-                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico">
+                        <input type="text" class="form-control mt-2" name="names" placeholder="Nombres" required>
+                        <input type="text" class="form-control mt-2" name="lastnames" placeholder="Apellidos" required>
+                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono" required>
+                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico" required>
                         <input type="submit" class="form-control mt-2 btn btn-success btn-block" value="Submit">
                     </div>
                 </form>
             </div>
         </div>
-        <caption>
-            <a href="/clientes" class="btn btn-link" style="text-decoration: none">Volver</a> 
-        </caption>
     </div>
 
 @endsection
