--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -28,18 +28,17 @@
         
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link text-decoration-none" href="/">Home<span class="sr-only">(current)</span></a>
+
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle text-decoration-none" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Ropa sobre Medida</a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item text-decoration-none" href="#">Ropa para Mujer</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item text-decoration-none" href="#">Ropa para Hombre</a>
+                  </div>
               </li>
-              <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="/contact">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="#">Ropa para Mujer</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-decoration-none" href="#">Ropa para Hombre</a>
-              </li>
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   More
@@ -62,6 +61,11 @@
                   <a class="dropdown-item text-decoration-none" href="/prendas">Prendas</a>
                 </div>
               </li>
+
+              <li class="nav-item">
+                  <a class="nav-link text-decoration-none" href="/contact">Contact</a>
+              </li>
+
             </ul>
           </div>
         </nav>
