--- a/resources/views/clientes/index.edge
+++ b/resources/views/clientes/index.edge
@@ -21,7 +21,7 @@
                     <span style="color : white">IMG</span><br><a href="/clientes/all">Ver todos los Clientes</a>
                 </li>
                 <li class="nav-item">
-                    <span style="color : white">IMG</span><br><a href="">Buscar un Cliente</a>
+                    <span style="color : white">IMG</span><br><a href="/clientes/buscar">Buscar un Cliente</a>
                 </li>
             </ul>
         </div>
