prendas - views registar - buscar

--- a/resources/views/clientes/index.edge
+++ b/resources/views/clientes/index.edge
@@ -12,16 +12,25 @@
     <div class="container text-center mt-5">
         <h1>Clientes</h1>
 
-        <div class="links cliente-link">
+        <div class="links cliente-link mt-5">
             <ul class="nav nav-fill justify-content-center mt-6">
                 <li class="nav-item">
-                    <span style="color : white">IMG</span><br><a href="/clientes/form">Registrar Cliente</a>
+                    <a href="/clientes/form">
+                        <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
+                        Registrar Cliente
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <span style="color : white">IMG</span><br><a href="/clientes/all">Ver todos los Clientes</a>
+                    <a href="/clientes/all">
+                        <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
+                        Ver todos los Clientes
+                    </a>
                 </li>
                 <li class="nav-item">
-                    <span style="color : white">IMG</span><br><a href="/clientes/buscar">Buscar un Cliente</a>
+                    <a href="/clientes/buscar">
+                        <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
+                        Buscar un Cliente
+                    </a>
                 </li>
             </ul>
         </div>
