--- a/resources/views/clientes/find.edge
+++ b/resources/views/clientes/find.edge
@@ -38,8 +38,8 @@
 <div class="info">
 
   @if(data == '')
-    <h2 class="text-white">
-      Porfavor ingresa un numero de telefono para buscar un cliente
+    <h2 class="text-white mt-5">
+      Porfavor ingresa un numero de telefono de un cliente
     </h2>  
   @else
     <div class="card mt-5">
