--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -47,7 +47,7 @@
           href="#" role="button" aria-haspopup="true" aria-expanded="false">Mas</a>
           <div class="dropdown-menu" >
             <a class="dropdown-item" href="/clientes" style="text-decoration: none">Clientes</a>
-            <a class="dropdown-item" href="#" style="text-decoration: none">Prendas</a>
+            <a class="dropdown-item" href="/prendas" style="text-decoration: none">Prendas</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/alquileres" style="text-decoration: none">Alquileres</a>
           </div>
