CRUD prendas -> Delete permanente casi terminado

--- a/resources/views/prendas/form.edge
+++ b/resources/views/prendas/form.edge
@@ -25,17 +25,18 @@
         </div>
             <div class="card-body">
                 <div class="form-group">
-                    <form action="" method="">
+                    <form action="/prendas/registro" method="POST">
+                        {{ csrfField() }}
                         <input type="text" class="form-control" name="name" placeholder="Nombre de la Prenda" required>
-                        <input type="text" class="form-control mt-3" name="color" placeholder="Color de la Prenda" required>
+                        <input type="color" class="form-control mt-3" name="color" placeholder="Color de la Prenda" required>
                         <label for="" class=" mt-3">Talla</label>
-                        <select name="" id="" class="form-control">
-                            <option value="">XS</option>
-                            <option value="">S</option>
-                            <option value="">M</option>
-                            <option value="">L</option>
-                            <option value="">XL</option>
-                            <option value="">2XL</option>
+                        <select name="size" id="" class="form-control">
+                            <option value="1">XS</option>
+                            <option value="2">S</option>
+                            <option value="3">M</option>
+                            <option value="4">L</option>
+                            <option value="5">XL</option>
+                            <option value="6">2XL</option>
                         </select>
                     <input type="submit" class="btn btn-success btn-block mt-3" value="submit">
                 </form>
