--- a/resources/views/prendas/index.edge
+++ b/resources/views/prendas/index.edge
@@ -30,7 +30,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/prendas/find" class="text-decoration-none btn btn-info">
+                <a href="/prendas/buscar" class="text-decoration-none btn btn-info">
                     Buscar Prenda
                 </a>
             </li>
