--- a/resources/views/alquileres/index.edge
+++ b/resources/views/alquileres/index.edge
@@ -23,14 +23,14 @@
       <li class="nav-item">
         <a href="/alquileres/form" class="nav-link"> 
           <img src="https://itrend.es/wp-content/uploads/2018/04/lauren-roberts-469994-unsplash.jpg" alt="" width="450" height="350"> <br>
-          Registrar Alquiler 
+          <p class=" btn btn-success btn-block"> Registrar Alquiler </p>
         </a>
       </li>
 
       <li class="nav-item">
         <a href="/alquileres/all" class="nav-link"> 
           <img src="https://estaticos.qdq.com/swdata/photos/793/793861600/61b41cecf72d4e5bb032805af837b48a.jpg" alt="" width="450" height="350">  <br>
-          Ver Todos los Alquileres 
+          <p class="btn btn-primary btn-block"> Ver Todos los Alquileres </p>
         </a>
       </li>
       
