--- a/public/clientes.css
+++ b/public/clientes.css
@@ -36,3 +36,13 @@ h1 , h2{
     font-size: 25px;
     font-family: Roboto
 }
+
+#index-clientes ul>li>a>p{
+    width: 87%;
+    color:white;
+    font-family: Lobster;
+    font-size: 30px;
+    text-decoration: none;
+    margin : 0 auto;
+    margin-top : 10px;
+}
