--- a/resources/views/clientes/index.edge
+++ b/resources/views/clientes/index.edge
@@ -1,7 +1,7 @@
 @layout('layouts.main')
 
 @section('style-extras')
-    {{style('index')}}  
+    {{style('clientes')}}  
 @endsection
 
 @section('title')
@@ -12,24 +12,24 @@
     <div class="container text-center mt-5">
         <h1>Clientes</h1>
 
-        <div class="links cliente-link mt-5">
+        <div class="links cliente-link mt-5" id="index-clientes">
             <ul class="nav nav-fill justify-content-center mt-6">
                 <li class="nav-item">
                     <a href="/clientes/form">
                         <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
-                        Registrar Cliente
+                       <p class="btn btn-primary">Registrar Cliente</p> 
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/clientes/all">
                         <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
-                        Ver todos los Clientes
+                       <p class="btn btn-success"> Ver todos los Clientes</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="/clientes/buscar">
                         <img src="https://www.tumarcafacil.com/wp-content/uploads/2017/06/RegistroDeMarca-01-1.png" alt="" width="160" height="130"><br>
-                        Buscar un Cliente
+                       <p class="btn btn-info"> Buscar un Cliente</p>
                     </a>
                 </li>
             </ul>
