--- a/resources/views/prendas/all.edge
+++ b/resources/views/prendas/all.edge
@@ -9,7 +9,7 @@
 @endsection
 
 @section('content')
-    <div class="table-prenda">
+    <div class="table-prenda mt-5">
         <div class="table-responsive text-center">
             <table class="table table-borderless table-hover">
                 <thead class="thead-light">
