--- a/public/clientes.css
+++ b/public/clientes.css
@@ -23,6 +23,7 @@ h1 , h2{
     width: 50%;
     margin: 0 auto;
     margin-top: 3%;
+    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
 }
 .form-find{
     width: 35%;
