--- a/public/index.css
+++ b/public/index.css
@@ -41,3 +41,14 @@ h1, h3, p{
     justify-content: center;
 }
 
+
+.form-contact{
+    width: 85%;
+    margin: 0 auto;
+    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
+}
+.form-contact h2{
+    color : white;
+    text-align: center;
+}
+
