--- a/public/prendas.css
+++ b/public/prendas.css
@@ -6,10 +6,12 @@
 html, body {
     height: 100%;
     width: 100%;
+    
 }
 .form-prenda{
     width: 45%;
     margin: 0 auto;
+    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
 }
 
 
@@ -22,4 +24,30 @@ html, body {
 .cuerpo-card{
     font-family: Lobster;
     font-size: 30px
+}
+
+.form-prenda{
+    font-family: Lobster;
+    font-size: 30px;
+    text-align : center;
+}
+
+.form-prenda label{
+    font-size : 20px;
+}
+
+.table-buscar-prenda h2{
+    font-family: Lobster;
+    font-size: 30px;
+    text-align : center;
+}
+
+h2{
+    text-align: center;
+    font-family: Lobster;
+    font-size: 30px;
+    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
+}
+#submit{
+    font-size: 30px;
 }
