--- a/resources/views/contact.edge
+++ b/resources/views/contact.edge
@@ -1,17 +1,24 @@
 @layout('layouts.main')
 
+@section('style-extras')
+  {{style('index')}}
+@endsection
+  
 @section('title')
     Contact
 @endsection
 
 @section('content')
-<form action="" method="">
-    <div class="form-group form-contact col-7" style="margin : 0 auto">
-        <input type="text" class="form-control mt-3"  placeholder="Full Name" id="name">
-        <input type="number" class="form-control mt-3"placeholder="Cellphone" id="cellphone">
-        <label for="" style="color:white" class="mt-3">About:</label>
-        <textarea class="form-control" rows="3" id="about"></textarea>
-        <input type="submit" value="Submit" class="btn btn-warning btn-block mt-2">
-    </div>
-</form>
+<div class="form-contact mt-5">
+    <form action="" method="">
+        <h2>Contact</h2>
+        <div class="form-group form-contact col-7 mt-7" >
+            <input type="text" class="form-control mt-3"  placeholder="Full Name" id="name">
+            <input type="number" class="form-control mt-3"placeholder="Cellphone" id="cellphone">
+            <label for=""class="mt-3 text-white">About:</label>
+            <textarea class="form-control" rows="3" id="about"></textarea>
+            <input type="submit" value="Submit" class="btn btn-warning btn-block mt-2">
+        </div>
+    </form>
+</div>
 @endsection
