Validaciones del Formulario de registro de alquileres hechas

--- a/public/alquileres.css
+++ b/public/alquileres.css
@@ -59,3 +59,9 @@ p{
     margin : 0 auto;
     margin-top : 10px;
 }
+
+.messageError{
+    color:red;
+    font-family: Lobster;
+    font-size: 17px ;
+}
