--- a/resources/views/alquileres/edit.edge
+++ b/resources/views/alquileres/edit.edge
@@ -29,16 +29,19 @@
             <div class="form-group">
 
                 <label for="" class="mt-3">Fecha de Entrega</label>
-                <input type="text" class="form-control" value="{{ alquileres_id.date_delivery }}"> <!--Editar Formato de fecha en un input text-->
-                <input type="date" class="form-control mt-1" name="date_delivery" required>
+                <input type="text" class="form-control" value="{{ alquileres_id.date_delivery }}">
+                <input type="date" class="form-control mt-1" name="date_delivery" value="{{ old('date_delivery')}}" >
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('date_delivery'), hasErrorFor('date_delivery'))  }}
 
                 <label for="" class="mt-3">Fecha de Devolucion</label>
                 <input type="text" class="form-control" value="{{ alquileres_id.return_date }}">
-                <input type="date" class="form-control mt-1" name="return_date" required>
+                <input type="date" class="form-control mt-1" name="return_date"  value="{{ old('return_date')}}" >
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('return_date'), hasErrorFor('return_date'))  }}
 
-            <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value" value="{{alquileres_id.value}}" required>
+                <input type="number" class="form-control mt-3" placeholder="Valor del Alquiler" name="value" value="{{old('value')}}">
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('value'), hasErrorFor('value'))  }}
 
-                <input type="submit" onclick="displayAlert()" class="btn btn-primary btn-block mt-3" value="Update">
+                <input type="submit" class="btn btn-primary btn-block mt-3" value="Update">
             </div>
         </form>
 
@@ -47,11 +50,4 @@
       </div>
     </div>
   </div>
-
-  <script>
-    const displayAlert = () >{
-      alert('Informacion Actualizada')
-    };
-  </script>
-
 @endsection
