--- a/public/index.css
+++ b/public/index.css
@@ -25,7 +25,7 @@ p{
     text-decoration: none;
     font-family: Lobster;
     font-size: 20px;
-    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
+    
 }
 h1, h3, p{
     color : white;
@@ -33,7 +33,7 @@ h1, h3, p{
     width: 100%;
     text-justify: auto;
     font-family: Lobster;
-    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
+    
 }
 
 .logo-cm{
@@ -45,7 +45,7 @@ h1, h3, p{
 .form-contact{
     width: 85%;
     margin: 0 auto;
-    animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;
+    /*animation: slideUp 1s cubic-bezier(0.19, 1, 0.30, 1) 1.3s forwards;*/
 }
 .form-contact h2{
     color : white;
