--- a/resources/views/clientes/form.edge
+++ b/resources/views/clientes/form.edge
@@ -26,10 +26,18 @@
                 <form action="/clientes/registro" method="POST">
                     {{ csrfField() }}
                     <div class="form-group">
-                        <input type="text" class="form-control mt-2" name="names" placeholder="Nombres" required>
-                        <input type="text" class="form-control mt-2" name="lastnames" placeholder="Apellidos" required>
-                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono" required>
-                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico" required>
+                        <input type="text" class="form-control mt-2" name="names" placeholder="Nombres" value="{{old('names' , '')}}" >
+                        {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('names'), hasErrorFor('names'))  }}
+
+                        <input type="string" class="form-control mt-2" name="lastnames" placeholder="Apellidos" value="{{old('lastnames' , '')}}">
+                        {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('lastnames'), hasErrorFor('lastnames'))  }}
+
+                        <input type="number" class="form-control mt-2" name="cellphone" placeholder="Telefono" value="{{old('cellphone' , '')}}">
+                        {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('cellphone'), hasErrorFor('cellphone'))  }}
+
+                        <input type="email" class="form-control mt-2" name="address" placeholder="Correo Electronico" value="{{old('address' , '')}}">
+                        {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('address'), hasErrorFor('address'))  }}
+
                         <input type="submit" class="form-control mt-2 btn btn-success btn-block" value="Submit">
                     </div>
                 </form>
