--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -12,7 +12,7 @@
 <div class="contenido">
 
   <div class="logo-cm">
-    <a href="home">
+    <a href="/">
       <img src="https://png.pngtree.com/element_pic/16/11/02/bd886d7ccc6f8dd8db17e841233c9656.jpg" alt="">
     </a>
   </div>
