--- a/resources/views/clientes/edit.edge
+++ b/resources/views/clientes/edit.edge
@@ -28,9 +28,17 @@
             {{ csrfField() }}
             <div class="form-group">
                 <input type="text" class="form-control mt-3" placeholder="Nombres" name="names" value="{{clientes_id.names}}" required>
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('names'), hasErrorFor('names'))  }}
+
                 <input type="text" class="form-control mt-3" placeholder="Apellidos" name="lastnames" value="{{clientes_id.lastnames}}" required>
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('lastnames'), hasErrorFor('lastnames'))  }}
+
                 <input type="number" class="form-control mt-3" placeholder="Telefono" name="cellphone" value="{{clientes_id.cellphone}}" required>
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('cellphone'), hasErrorFor('cellphone'))  }}
+
                 <input type="email" class="form-control mt-3" placeholder="Correo Electronico" name="address" value="{{clientes_id.address}}" required>
+                {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('address'), hasErrorFor('address'))  }}
+
                 <input type="submit"  class="btn btn-primary btn-block mt-3" value="Update">
             </div>
         </form>
