--- a/resources/views/clientes/find.edge
+++ b/resources/views/clientes/find.edge
@@ -28,7 +28,8 @@
       <div class="form-group">
         <form action="/clientes/buscado" method="POST">
           {{ csrfField() }}
-        <input type="number" class="form-control" placeholder="Ingrese el Numero de Telefono" name ="cellphone" value = "{{data.cellphone}}" required >
+          <input type="number" class="form-control" placeholder="Ingrese el Numero de Telefono" name ="cellphone" value = "{{data.cellphone}}" required >
+            {{ elIf('<span class="messageError">$self</span> <br>', getErrorFor('cellphone'), hasErrorFor('cellphone'))  }}
           <input type="submit" class="btn btn-info btn-block mt-2" value="Search">
         </form>
       </div>
